--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,6 +46,7 @@ html, body {
   font-size: 16px;
   color: var(--text-color);
   background-color: var(--background-color);
+  transition: background-color var(--transition-speed), color var(--transition-speed);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
